opam-version: "1.2"
maintainer: "Marek Kubica <marek@xivilization.net>"
authors: [ "Marek Kubica <marek@xivilization.net>" ]
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/Leonidas-from-XIV/awwcaml"
dev-repo: "git@github.com/Leonidas-from-XIV/awwcaml.git"
bug-reports: "https://github.com/Leonidas-from-XIV/awwcaml/issues"
build:  [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build & >= "1.0+beta17"}
  "base" {>= "v0.11" & < "v0.12"}
  "cohttp-async" {>= "1.1.0" & < "1.2.0"}
  "ppx_deriving_yojson" {>= "3.1"}
  "bitstring"
]
